web-infras/parser/tests/fixtures/esprima/es2017/async/functions/async-if-await/output.txt
[SyntaxError]: Async functions can only be declared at the top level or inside a block. (1,14)
1|if (x) async function f(a) { await a }
 |            ^
